--- a/examples/pages/frontend/Cargo.toml
+++ b/examples/pages/frontend/Cargo.toml
@@ -18,6 +18,6 @@ wasm-bindgen-test = "0.3.19"
 [dependencies]
 zoon = { path = "../../../crates/zoon" }
 evalexpr = { version = "6.3.0", default-features = false }
-
+shared = { path = "../shared", features = ["frontend"] }
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ['-Os']
